--- a/fibonacci.html
+++ b/fibonacci.html
@@ -72,7 +72,13 @@
                             </div>
                         </div>
                         <div class="calc-table">
-                            <!-- TODO add a table showing columns i (0-6),i+(i-1) and F i/i-1 -->
+                            <tr>
+                                <td></td>
+                                <th scope="col">F<sub>i</sub></th>
+                                <th scope="col">&#981; = F<sub>i</sub>/F<sub>i-1</sub></th>
+                            </tr>
+                            <caption>Fibonacci sequence and &#981;</caption>
+
                         </div>
                         <p>The ratio of each number in the sequence of Fibonacci numbers
                             approximates the golden ratio &#981;.
@@ -97,7 +103,14 @@
 
         <aside>
             <div class="fib-aside">
-                <!-- TODO add figures with pictures of Fibonacci, the man, and his book -->
+                <figure class="fibonnaci">
+                    <img src="images/fibonacci.jpg" alt="Leonardo Bonacci,aka Fibonacci">
+                    <figcaption>Leonardo Bonacci, aka Fibonacci</figcaption>
+                </figure>
+                <figure class="book-of-calc">
+                    <img src="images/book-of-calculation.jpg" alt="from The Book of Calculation">
+                    <figcaption>The Book of Calculation <br>by Fibonacci</figcaption>
+                </figure>
             </div>
         </aside>
 
